# reason-rust-scraper

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  Rocket.toml  bsconfig.json  diesel.toml  index.html  package-lock.json  package.json  run.sh  test.sh  watcher.js  webpack.config.js
client/: index.re
client/__tests__/: app_test.re
client/components/: app.re  appStyles.re
client/components/configs/: routes.re  utils.re
client/components/global/: link.re
client/components/home/: home.re
client/components/model/: models.re
client/components/models/: models.re
client/components/notfound/: notFound.re
client/components/view/data/: data.re  dataStyles.re
client/components/view/delete/: delete.re
client/components/view/details/: detail.re  detailStyles.re  details.re
client/components/view/forms/: ErrorMessage.re  ValidateHomeForm.re
client/src/: index.re
client/src/components/: app.re  appStyles.re  details.re  form.re  fragment.re  home.re  model.re
client/src/configs/: routes.re
migrations/2020-01-31-113723_create_scrap/: down.sql  up.sql
server/: main.rs  pool.rs  schema.rs  scrapper.rs  utils.rs
server/backup/: rust_scrapper.sql
server/database/: scrap_db.rs
server/lib/: mod.rs  scrapper.rs
server/models/: mod.rs  scrap_models.rs
server/routes/: scrap_routes.rs
server/src/: hooks.rs  main.rs  pool.rs  schema.rs  scrapper.rs  utils.rs
server/src/database/: mod.rs  scrap_db.rs
server/src/models/: scrap_models.rs
server/src/routes/: mod.rs  scrap_routes.rs
server/tests/: mod.rs  testing.rs
(+13 files in other folders)
